# LearningConcepts

./: .gitignore  GitTester.txt  LearningConcepts.code-workspace  RustProjects.code-workspace  status_report.txt
Arduino/: .gitignore  .gitignore~  How to Release.txt
Arduino/Troubleshooting/: Linux_port.txt  push_test_file.txt
C/: .gitignore  Strings.c
C/Books/ElementosProgramacaoC/10-CDs-library/: CMakeLists.txt  CMakeLists.txt.music  CMakeLists.txt.template  compile_music.sh  music.c  run_cmake.sh  songs.c  songs.h  string_util.c  string_util.h  utils.h
C/Books/ElementosProgramacaoC/10-CDs-library/lib/: buttons.c  buttons.h  data_base.c  data_base.h  data_base_io.c  data_base_io.h  dialogs.c  dialogs.h  disks.c  disks.h  int_util.c  int_util.h  items.c  items.h  menus.c  menus.h  ppvoid.c  ppvoid.h  string_util.c  string_util.h  utils.c  utils.h
C/Books/ElementosProgramacaoC/10-CDs-library/snippets/: 01-format-specifiers.c  02-stdargs-dialog-box.c  03-const-pointers.c
C/Debugging/: gdb_commands.txt
C/GTK/: 01-make-window.c  02-hello-world-gtk.c
C/Miscellaneous/: Network.c  Strings.c
CMake/GitHub/: .gitignore  README.md  Useful CMake Examples.desktop
CMake/GitHub/cmake-examples/01-basic/A-hello_cmake/: CMakeLists.txt
CMake/GitHub/cmake-examples/01-basic/B-hello-headers/: CMakeLists.txt
CMake/GitHub/cmake-examples/01-basic/C-static-library/: CMakeLists.txt
CMake/GitHub/cmake-examples/01-basic/D-shared-library/: CMakeLists.txt
CMake/GitHub/cmake-examples/01-basic/E-installing/: CMakeLists.txt
CMake/GitHub/cmake-examples/01-basic/G-compile-flags/: CMakeLists.txt  main.cpp
CMake/GitHub/cmake-examples/01-basic/H-third-party-library/: CMakeLists.txt
CMake/VSCode/: CMakeLists.txt  HowTo.txt  main.cpp  my_number.cpp  my_number.h
CSharp/: LearningConcepts.code-workspace  LearningConcepts.sln  NullConditional.cs  VisualStudioCode.txt
CSharp/CovarianceContravariance/: Program.cs
CSharp/Generics/: Program.cs
CSharp/LearningConcepts/: LearningConcepts.sln
CSharp/NullConditional/: NullConditional.cs
CSharp/ReferencesInOut/: Program.cs
Cpp/: .gitignore  Arrays.cpp  HelloWorld.cpp  LearningConcepts.filters  LearningConcepts.sln  LearningConcepts.vcxproj  LibraryDeclarations.h  Main.cpp  OperatorOverloading.cpp  Printable.h  References.cpp  StaticCast.cpp
Cpp/ArduinoAlike/: Arduino_macros.txt  Serial_println.cpp
Cpp/ArduinoAlike/MediatorPattern/01-Blink/: CMakeLists.txt  Mediator.h
Cpp/Boost/: HowToInstall.txt
Cpp/ChatGPT/DynamicLibrary/app/: CMakeLists.txt  main.cpp
Cpp/ChatGPT/DynamicLibrary/lib/: CMakeLists.txt  my_library.cpp  my_library.hpp
Cpp/CommunicationSerialCLR/: CommunicationSerialCLR.vcxproj
Cpp/CommunicationSerialPort/: CommunicationSerialPort.vcxproj
Cpp/Compiling/: CompilingCommands.txt
Cpp/HelloWorld in C++1/: HelloWorld in C++1.vcxproj  HelloWorld in C++1.vcxproj.filters  Main.cpp  Printable.cpp  Printable.h
Cpp/Json/: data_generator.py  data_processor  data_processor.cpp  list_of_floats_3.json
Cpp/LINKER_Including/: AddTwoIntegers.cpp  DirectInclude.cpp  IncludedFunction.h  LINKER_Including.vcxproj  LINKER_Including.vcxproj.filters  Main.cpp
Cpp/LambdaExpressions/: LambdaExpressions.vcxproj  Main.cpp
Cpp/LanguageOddities/: LanguageOddities.vcxproj  Main.cpp
Cpp/LearningConcepts/: LearningConcepts.sln
Cpp/Structures/: Main.cpp  Structures.vcxproj
Cpp/VSCode/: VSCode_HowTo.txt
Cpp/basic_includes/: compiling_error.txt  include_lib.cpp  include_lib.h  main.cpp
Git/: git_commands.txt
Git/UpdateScripts/: git_pull_all.sh
Git/pull_scripts/: git_pull_all.bat  git_pull_all.sh  pull_all_three.bat
Go/: .gitignore  HowTo.txt
Go/ChatGPT/: hello_world.go
JS/: BarChart.html  BarChart.js  ColorAnimation.html  Drag.html  Drag.js  EventHandling.css  EventHandling.html  EventHandling.js  SkillsBuild.js  class-proto.js
JS/ClassAndPrototype/: ClassApproach.js  PrototypeApproach.js
Jupyter/: .gitignore  HowTo.txt
Linux/: audio_commands.txt  desktop_commands.txt  system_commands.txt  useful_commands.txt
Linux/Configurations/: xfce4.txt
Linux/PartitionsFormating/: useful_commands.txt
MicroPython/: HowTos.md
Python/: .gitignore  Home - Python Crash Course, 2nd Edition.url  calculator.py  commands.txt  hello.py
Python/ChatGPT/: power2plot.py
Python/ChatGPT/ctype_midi_json/: CMakeLists.txt  main.cpp  test.py  test_ctypes.py
Python/ChatGPT/ctype_midi_json/include/: my_library.hpp  my_library_ctypes.h  my_library_ctypes.hpp
Python/ChatGPT/ctype_midi_json/src/: my_library.cpp  my_library_ctypes.cpp
Python/ChatGPT/ctypes_3rdParty/: CMakeLists.txt  main.cpp  python_ctypes.py
Python/ChatGPT/ctypes_3rdParty/include/: my_library.hpp  others_library.hpp
Python/ChatGPT/ctypes_3rdParty/src/: my_library.cpp  my_library_ctypes.cpp  others_library.cpp
Python/ChatGPT/ctypes_library/: CMakeLists.txt  main.cpp  python_ctypes.py  test.py
Python/ChatGPT/ctypes_library/include/: my_library.hpp
Python/ChatGPT/ctypes_library/src/: my_library.cpp
Python/ChatGPT/pybind11_library/: .gitignore  CMakeLists.txt  main.py  notes.txt  test.py
Python/ChatGPT/pybind11_library/include/: my_library.hpp
Python/ChatGPT/pybind11_library/src/: my_library.cpp
Python/PIP/: How to Install PIP on Windows.txt  How to install matplotlib.txt  virtualenv.txt
Python/Profilers/: cprofile_runtime_stats.py  pyinstrument_call_stack.py  pyinstrument_code_block.py  test.pstats  test.py  time_profiling.py  timeit_benchmark.py
Python/PromptToolkit/: 01_prompt_not_displaying_correctly.py  02_multiline_input_issues.py  03_customizing_the_prompt.py  04_history_and_autocomplete.py  05_print_formatted_text.py  06_proper_REPL_structure.py  07_output_filter.py  08_proper_newline_handling.py  09_asynchronous_output_message_queue.py  14.1_random_events.py  (+9 more)
Rust/: .gitignore  HowTo.txt
VBA/: .gitignore
VBA/ChatGPT/COM/: CMakeLists.txt  RandomNumberCOM.cpp  how_to.txt
VBA/ChatGPT/DLL/: .gitignore  CMakeLists.txt  MessageBox.xlsm  RandomNumber.cpp  how_to.txt
VSCode/: ManuallyUpdateExtensions.txt
dotNET/: useful_commands.txt
(+748 files in other folders)
